css/style.css
* {
  box-sizing: border-box;
  margin: 0;
}

html {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  font-family: "Raleway", sans-serif;
  text-align: center;
  font-size: 1em;
  letter-spacing: 2px;
  line-height: 300%;
}

body {
  background-color: #fff;
  height: 100%;
  color: #454545
}

a {
  background-image: linear-gradient(to right, #fff 50%, rgba(104,129,231,0.7) 50%);
  background-position: -0% 0;
  background-size: 200% auto;
  font-weight: 800;
  text-decoration: none;
  color: #454545;
  text-decoration: none;
  transition: background-position 0.5s ease-out;
}

a:hover {
  background-position: -99.99% 0;
}

#social a {
  margin: 0.5em;
  max-width: 100%;
  font-size: 0.75em;
}

h1 {
  font-weight: 300;
  padding: 10px;
}

h2 {
  font-size: 1em;
  color: #a0a0a0;
}

h3 {
  font-size: 3em;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 50vh;
  padding-top: 10vh;
  padding-bottom: 100vh;
}

.container2 {
  margin: auto;
  max-width: 1200px;
  margin-bottom: 30px;
}

.responsive-image {
  max-width: 100%;
}

.cell img {
  display: block;
}


#header {
  margin: auto;
  max-width: 1000px;
}

.cell img {
  display: block;
}

.lightbox {
  display: none;
  position: fixed;
  z-index: 999;
  width: 100%;
  height: 100%;
  text-align: center;
  top: 0;
  left: 0;
  background: rgba(0,0,0,0.8);
}

.lightbox img {
  max-width: 100%;
  max-height: 95%;
  margin-top: 20px;
}

.lightbox video {
  max-width: 100%;
  max-height: 95%;
  margin-top: 20px;
}

.lightbox:target {
  outline: none;
  display: block;
}


@media screen and (min-width: 600px) {
  .grid {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
  }
  .cell {
    width: 50%;
  }
  #social a {
    margin: 1em;
    font-size: 1em;
  }
  .container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 90vh;
    padding: 0;
  }
}

@media screen and (min-width: 1000px) {
  .cell {
    width: calc(100% / 3);
  }
}

